# CAR

./: .gitignore  CMakeLists.txt  README.md  code_snippet.cpp  install.sh
character/: box.xml  climb_box.xml  ground.xml  hang_wall.xml  hindsight_box.xml  humanoid.xml  humanoid1.xml  humanoid2.xml  humanoid_general.xml  humanoid_long_arm.xml  humanoid_mixamo.xml  humanoid_mixamo2.xml  humanoid_ue.xml  humanoid_ue_nolimit.xml  j1_box.xml  j2_box.xml  j3_box.xml  jump_box.xml  jump_box_long.xml  laf_push_stand_box.xml  mxm_gen.xml  mxm_nolimit.xml  mxm_t2.xml  mxm_t2_nolimit.xml  mxm_t3.xml  obstacle.xml  push_box.xml  run_box.xml  sandbag.xml  swing_bar.xml
enemy_kin/: CMakeLists.txt  EnSceneMainWindow.cpp  EnSceneMainWindow.h  EnSceneMotionWidget.cpp  EnSceneMotionWidget.h  EnemyKinController.cpp  EnemyKinController.h  EnemySceneMain.cpp
interactive/: CMakeLists.txt  EnemyKinController.cpp  EnemyKinController.h  MetaController.cpp  MetaController.h  SceneMainWindow.cpp  SceneMainWindow.h  SceneMotionWidget.cpp  SceneMotionWidget.h  SubController.cpp  SubController.h  sceneMain.cpp
learned_motion/: cartwheel_mixamo.bvh  cartwheel_mixamo_trained.bvh  test.bvh
mix/: MetaController.cpp  MetaController.h  SceneMainWindow.cpp  SceneMainWindow.h  SceneMotionWidget.cpp  SceneMotionWidget.h  SubController.cpp  SubController.h  sceneMain.cpp
motion/: aa.bvh  b_13_11_1_edited.bvh  b_Take_4.bvh  backflip_mxm.bvh  bij_scene1.bvh  bij_scene2.bvh  bij_scene3.bvh  bij_scene_final.bvh  bj_int_short.bvh  box_idle.bvh  box_move_back.bvh  box_move_front.bvh  box_move_left.bvh  box_move_right.bvh  braced_hang_hop_right.bvh  cartwheel.bvh  cartwheel_1016.bvh  cartwheel_mixamo.bvh  cartwheel_mixamo2.bvh  cartwheel_phase.bvh  cartwheel_ue.bvh  cartwheel_ue_2.bvh  fight_trajectory.bvh  fjump2_phase.bvh  fjump3_phase.bvh  fjump_phase.bvh  fwalk_phase.bvh  hjump_phase.bvh  humanoid_test.bvh  j1.bvh  j2.bvh  j2_longer.bvh  j3.bvh  j3_8_81.bvh  j3_con5.bvh  jump.bvh  jump2.bvh  jump_13_40.bvh  jump_13_41.bvh  jump_high.bvh  (+40 more)
network/: CMakeLists.txt  SimEnv.cpp  SimEnv.h  env.py  explore_test.sh  monitor.py  network.py  network2.py  network3.py  ppo.py  ppo2.py  ppo3.py  regression.py  sac.py  sampler.py  trajectory_manager.py  utils.py  walk_1.2_2.0_torque
network/output/cartwheel_mixamo/: network-0.index  network-rmax.index  parameters  results  rms-0  rms-rmax
render/: CMakeLists.txt  Camera.cpp  Camera.h  DART_interface.cpp  DART_interface.h  GLUTWindow.h  GLfunctions.cpp  GLfunctions.h  KinematicMotionWindow.cpp  KinematicMotionWindow.h  RecordWindow.cpp  RecordWindow.h  RegressionWindow.cpp  RegressionWindow.h  SeqRecordWindow.cpp  SeqRecordWindow.h  SimWindow.cpp  SimWindow.h  SimWindowMulti.cpp  SimWindowMulti.h  SplineWindow.cpp  SplineWindow.h  fragshader.txt  main.cpp
render_qt/: BVHWidget.cpp  BVHWidget.h  CMakeLists.txt  Camera.cpp  Camera.h  DART_interface.cpp  DART_interface.h  GLfunctions.cpp  GLfunctions.h  MainWindow.cpp  MainWindow.h  MetaController.cpp  MetaController.h  MotionWidget.cpp  MotionWidget.h  ParamWidget.h  main.cpp
scene/: box_map1.xml  s1_ctrl.xml  s1_obj.xml  s1_scenario.xml
sim/: AxisController.cpp  AxisController.h  BVH.cpp  BVH.h  BVHToXML.cpp  CMakeLists.txt  Character.cpp  Character.h  CharacterConfigurations.h  Controller.cpp  Controller.h  Functions.cpp  Functions.h  Ground.cpp  Ground.h  Humanoid.cpp  Humanoid.h  HumanoidController.cpp  HumanoidController.h  MotionGenerator.cpp  MotionGenerator.h  MultilevelSpline.cpp  MultilevelSpline.h  ReferenceManager.cpp  ReferenceManager.h  RegressionMemory.cpp  RegressionMemory.h  SkeletonBuilder.cpp  SkeletonBuilder.h  climb_box.xml  flair_cleanup.cpp  swing_cleanup.cpp
utils/: pca.py  plot_curriculum_info.py  plot_mean.py  plot_param_space.py  plot_results.py  plot_time_data.py  plot_vp_table.py  spline.py  tensorflow_rename_variables.py
